--- a/src/editor/nodepropertiesdialog.ui
+++ b/src/editor/nodepropertiesdialog.ui
@@ -24,7 +24,34 @@
        <string>Properties</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,0">
-       <item row="1" column="1">
+       <item row="0" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Name:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="nameEdit"/>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="1">
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="4" column="0">
           <widget class="QTextBrowser" name="textBrowser_2">
@@ -88,33 +115,20 @@
          </item>
         </layout>
        </item>
-       <item row="1" column="0">
+       <item row="3" column="0">
         <widget class="NodePropertiesList" name="propertiesTable"/>
        </item>
-       <item row="0" column="0" colspan="2">
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item row="2" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
-          <widget class="QLabel" name="label_6">
+          <widget class="QLabel" name="label_7">
            <property name="text">
-            <string>Command:</string>
+            <string>Source:</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="commandCombo"/>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
+          <widget class="QLineEdit" name="sourceEdit"/>
          </item>
         </layout>
        </item>
