New ScriptSceneDialog allows adding/renaming/reordering/removing inputs.
Now for the outputs...

--- a/src/editor/mainwindow.ui
+++ b/src/editor/mainwindow.ui
@@ -41,8 +41,15 @@
     </property>
     <addaction name="actionPreferences"/>
    </widget>
+   <widget class="QMenu" name="menuProject">
+    <property name="title">
+     <string>Project</string>
+    </property>
+    <addaction name="actionEditInputsOutputs"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuProject"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -101,6 +108,11 @@
   <action name="actionPreferences">
    <property name="text">
     <string>Preferences</string>
+   </property>
+  </action>
+  <action name="actionEditInputsOutputs">
+   <property name="text">
+    <string>Inputs/Outputs...</string>
    </property>
   </action>
  </widget>
