--- a/src/editor/scenescriptdialog.ui
+++ b/src/editor/scenescriptdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Scene Script</string>
+   <string>Inputs/Outputs</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
