--- a/src/editor/mainwindow.ui
+++ b/src/editor/mainwindow.ui
@@ -51,9 +51,16 @@
     <addaction name="actionEditInputsOutputs"/>
     <addaction name="actionRemoveUnknowns"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAboutQt"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
    <addaction name="menuProject"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionQuit">
@@ -136,6 +143,11 @@
    </property>
    <property name="text">
     <string>Open Lua File...</string>
+   </property>
+  </action>
+  <action name="actionAboutQt">
+   <property name="text">
+    <string>About Qt...</string>
    </property>
   </action>
  </widget>
