Fixed tab order in VariablePropertiesDialog.

--- a/src/editor/variablepropertiesdialog.ui
+++ b/src/editor/variablepropertiesdialog.ui
@@ -71,6 +71,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>nameEdit</tabstop>
+  <tabstop>labelEdit</tabstop>
+  <tabstop>type</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
