--- a/src/editor/luadockwidget.ui
+++ b/src/editor/luadockwidget.ui
@@ -28,7 +28,10 @@
      <number>2</number>
     </property>
     <item row="0" column="0">
-     <widget class="QListView" name="listView"/>
+     <widget class="QComboBox" name="dirComboBox"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QTreeView" name="treeView"/>
     </item>
    </layout>
   </widget>
