MetaEvent overhaul.  ScriptsDock, MetaEventDock gained game-directory comboboxes.
MetaEventManager now keeps a list of MetaEventInfo for each MetaEvents.lua
file it knows about.  Previously, all the events from every .lua file were
stored in one big QMap<> with event names as keys.  That didn't allow for
events from different files with the same name (although I suspect the game
won't allow for mods defining events with the same name).

MetaEventNode remembers the source .lua file the event came from.  This is
needed in case the file gets renamed/deleted.

--- a/src/editor/metaeventdock.ui
+++ b/src/editor/metaeventdock.ui
@@ -27,8 +27,11 @@
     <property name="bottomMargin">
      <number>2</number>
     </property>
-    <item row="0" column="0">
+    <item row="1" column="0">
      <widget class="QTreeView" name="treeView"/>
+    </item>
+    <item row="0" column="0">
+     <widget class="QComboBox" name="dirComboBox"/>
     </item>
    </layout>
   </widget>
